cockpit plugin: Fix alignment and layout issues in register dialog
Fix the alignment and layout issues by porting to cockpits
form-layout classes.

Fixes https://bugzilla.redhat.com/show_bug.cgi?id=1582244

--- a/cockpit/src/subscriptions.css
+++ b/cockpit/src/subscriptions.css
@@ -60,33 +60,14 @@
     vertical-align: sub;
 }
 
-.form-table-ct .form-inline {
+.ct-form-layout .ct-form-layout {
     background: #f4f4f4;
     border-width: 1px;
     border-style: solid;
     border-color: #bababa;
     padding: 4px;
-}
-
-.form-group-ct {
-    background: #f4f4f4;
-    border-width: 1px;
-    border-style: solid;
-    border-color: #bababa;
-    padding: 4px;
+    padding-top: 10px;
     width: 100%;
-}
-
-.form-group-ct tr td:last-child {
-    padding-right: 4px;
-}
-
-.form-group-ct tr:first-child td:last-child {
-    padding-top: 6px;
-}
-
-.form-group-ct tr:last-child td:last-child {
-    padding-bottom: 6px;
 }
 
 /* Make a dialog visible */
